--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,93 +1,95 @@
-.hero1 {
-    background: #FFF;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    text-align: left;
-  }
-  
-  .hero1-button {
-    color: #212121;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.625;
-    letter-spacing: 0.48px;
-    border-radius: 4px;
-    background: #F5F4FA;
-    padding: 6px 22px;
-    border: none;
-    box-shadow: none;;
+
+.active-page {
+  color: var(--akcent-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.142857143;
+  letter-spacing: 0.28px;
+
+}
+
+
+.hero {
+  background: #FFF;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  text-align: left;
+  border-top: 1px solid #ECECEC;;
+}
+
+.hero-button {
+   color: #212121;
+   text-align: center;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.625; 
+   letter-spacing: 0.48px;
+   border-radius: 4px;
+   background: #F5F4FA;
+   padding: 6px 22px;
+   border: none;
+   box-shadow: none;
+}
+
+.hero .hero-button:hover {
+   color: #FFF;
+   text-align: center;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.625;
+   letter-spacing: 0.48px;
+   border-radius: 4px;
+   background: #2196F3;
+   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+}
+
+.main-text {
+   color: #212121;
+   font-size: 18px;
+   font-weight: 700;
+   line-height: 2; 
+   letter-spacing: 1.08px;
+}
+
+.main-desc {
+   color: #757575;
+   font-size: 16px;
+   font-weight: 400;
+   line-height: 1.875; 
+   letter-spacing: 0.48px;
+   margin-top: 4px;
+}
+
+.main-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  gap: 30px;
+}
+.main-box {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #EEE;
+  border-left: 1px solid #EEE;
+  border-right: 1px solid #EEE;
+  background: #FFF;
+ }
+
+.main-img {
+  width: 100%;
+}
+
+.main-item {
+  flex-basis: calc((100% - 60px) /3);
+}
+
+.main-item:hover {
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
 }
 .button-box {
   justify-content: center;
   display: flex;
   gap: 8px;
-} 
-  
-.hero1-button:hover {
-     color: #FFF;
-     text-align: center;
-     font-size: 16px;
-     font-weight: 500;
-     line-height: 1.625;
-     letter-spacing: 0.48px;
-     border-radius: 4px;
-     background: #2196F3;
-     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-
-     
-  }
-
- 
-  .main-text {
-     color: #212121;
-     font-size: 18px;
-     font-weight: 700;
-     line-height: 2; 
-     letter-spacing: 1.08px;
-     width: 322px;
-
-  }
-  .main-img{
-    width: 370px;
-   height: 294px;
-  }  
-  .main-desc {
-     color: #757575;
-     font-size: 16px;
-     font-weight: 400;
-     line-height: 1.875; 
-     letter-spacing: 0.48px;
-     margin-top: 4px;
-  }
- 
-  .main-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 50px;
-    gap: 30px;
-  }
-  .main-item:hover{
-    border: 1px solid #EEE;
- box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
-  }
-  .main-item {   
-    border: 1px solid #EEE;
-    width: 370px;
-    height: 404px;
-      flex-basis: calc((100% - 60px) /3);
-  }
- 
-  .button-box {
-    justify-content: center;
-    display: flex;
-    gap: 8px;
- }
- .main-box {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border: 1px solid #EEE;
-  background: #FFF;
 }
