--- a/assets/style.css
+++ b/assets/style.css
@@ -266,6 +266,7 @@ body {
   display: flex;
   gap: 30px;
 }
+
 .ourteam {
   background-color: var(--section-background);
   padding-bottom: 94px;
@@ -378,7 +379,7 @@ body {
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  border: 1px solid var(--svg-color);
+  outline: 1px solid var(--svg-color);
   padding: 16px 32px 16px 32px;
 }
 
@@ -399,7 +400,8 @@ body {
 
 .schedule-link:hover,
 .schedule-link:focus {
-  border: 1px solid var(--akcent-color);
+  outline: 1px solid var(--akcent-color);
+  border: none;
   .schedule-image {
     fill: var(--akcent-color);
   }
@@ -457,6 +459,7 @@ body {
   line-height: 1.384615385;
   letter-spacing: 0.78px;
 }
+
 .footer-span {
   color: var(--main-color);
   font-family: Raleway;
@@ -514,4 +517,3 @@ body {
   height: 20px;
   fill: var(--main-color);
 }
-
